# sae_feature_scouter

./: .env_example  README.md  pyproject.toml
dashboards/: demo_prompt_vis.html  test_report.json
sae_feature_scouter/: Dockerfile
sae_feature_scouter/api/: server.py
sae_feature_scouter/services/: config.py  data_loader.py  data_preparation.py  inference.py  model_loader.py  storage.py  visualization.py  workflow.py
sae_feature_scouter/tests/: test_api_services.py
